logs/zyutil.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zyutil'...
Listing './lib/python3.5/site-packages/zyutil/hashkit'...
Listing './lib/python3.5/site-packages/zyutil/lib'...
Listing './lib/python3.5/site-packages/zyutil/lib/tornado'...
Compiling './lib/python3.5/site-packages/zyutil/options.py'...
***   File "./lib/python3.5/site-packages/zyutil/options.py", line 21
    from . import lib.tornado.options
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zyutil/test.py'...
***   File "./lib/python3.5/site-packages/zyutil/test.py", line 25
    from . import lib.tornado as tornado
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zyutil-1.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
